<resources>
    <string name="app_name">同步院线</string>
    <string name="ok">确定</string>
    <string name="ok_counting">确定 %1$ds</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="please_wait">请稍候...</string>
    <string name="loading">加载中...</string>
    <string name="loading_failed">获取信息失败！</string>
    <string name="loading_error">影片还在奋力加载中...</string>
    <string name="refresh">Refresh</string>
    <string name="N_A">N/A</string>
    <string name="online">在线</string>
    <string name="download">download</string>
    <string name="trailer">trailer</string>
    <string name="local">本地</string>
    <string name="play">观看</string>
    <string name="purchase">purchase</string>
    <string name="purchase_to_play">购票观看</string>
    <string name="purchase_to_download">购票下载</string>
    <string name="price">票价</string>
    <string name="original_price">原价</string>
    <string name="online_price">在线票价</string>
    <string name="download_price">下载票价</string>
    <string name="balance">balance</string>
    <string name="topUp">Top up</string>
    <string name="vip">会员</string>
    <string name="free">免费</string>
    <string name="credit_pay">先看后付</string>
    <string name="price_RMB">%1$.2f元</string>
    <string name="RMB">元</string>
    <string name="minute">分钟</string>
    <string name="need_write_permission">请授权文件读写权限!</string>
    <string name="crash_toast_text">系统异常, 正在修复</string>
    <string name="no_installer">系统没有内置安装器应用</string>
    <string name="change_server">切换服务器环境</string>
    <string name="i_know">我知道了</string>
    <string name="nav_all">All</string>
    <string name="nav_now">Now</string>
    <string name="init_failed">初始化失败</string>
    <string name="login">Login</string>
    <string name="login_please_wait">正在登录, 请稍候...</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败!</string>
    <string name="no_phone">请输入手机号!</string>
    <string name="get_verify_code_failed">获取验证码失败!</string>
    <string name="verify_phone_failed">验证手机号失败!</string>
    <string name="recommend_get_failed">推荐页 : %1$s</string>
    <string name="topic_old">往期专题</string>
    <string name="topic_detail_get_failed">获取专题详情失败</string>
    <string name="topic_list_get_failed">获取专题列表失败</string>
    <string name="films_load_failed">加载影片列表失败!</string>
    <string name="film_detail_loading_please_wait">正在加载影片信息, 请稍候...</string>
    <string name="film_detail_updating_view_please_wait">正在更新信息, 请稍候...</string>
    <string name="film_detail_load_failed">加载影片信息失败</string>
    <string name="film_detail_update_view_failed">刷新影片信息失败</string>
    <string name="film_detail_missing_film">没有该影片!</string>
    <string name="film_detail_corner_vip_free">会员免费</string>
    <string name="film_detail_corner_vip_charge">会员收费</string>
    <string name="film_detail_open_vip_for_free">开通会员免费看</string>
    <string name="film_detail_open_vip_for_discount">开通会员优惠看</string>
    <string name="film_detail_open_vip">开通会员尊享看</string>
    <string name="film_detail_credit_pay">先看后付</string>
    <string name="film_detail_trailer">预告片</string>
    <string name="film_detail_more">详情</string>
    <string name="film_detail_no_description">该影片无详情介绍</string>
    <string name="film_detail_sweep_code_pay">扫码支付立即观看</string>
    <string name="film_detail_recommended_for_you">为您推荐</string>
    <string name="film_detail_director">导演：</string>
    <string name="film_detail_actors">演员：</string>
    <string name="film_detail_watch_time">观影期：</string>
    <string name="film_detail_watch_time_month2day">%1$d.%2$d</string>
    <string name="film_detail_watch_time_year2month2day">%1$d.%2$d.%3$d</string>
    <string name="film_detail_price">票价：</string>
    <string name="film_detail_vip">会员：</string>
    <string name="film_detail_free">免费</string>
    <string name="film_detail_toast_no_trailer">囧，找不到预告片...</string>
    <string name="film_detail_checking_play_validity">正在检查播放状态, 请稍候...</string>
    <string name="film_detail_purchase_success">购买影片成功</string>
    <string name="film_detail_purchase_failed">购买影片失败</string>
    <string name="film_detail_download_start">开始下载</string>
    <string name="film_detail_download_resume">继续下载</string>
    <string name="film_detail_download_pause">暂停下载</string>
    <string name="film_detail_download_pending">正在等待下载</string>
    <string name="film_detail_download_error_to_purchase">再进行购票</string>
    <string name="film_detail_download_error_re_download">重新创建下载任务</string>
    <string name="film_detail_download_error_no_storage">U盘不存在！</string>
    <string name="film_detail_download_error_no_storage_content">请插入可用空间大于%1$s的U盘后</string>
    <string name="film_detail_download_error_space_not_enough">U盘空间不足！</string>
    <string name="film_detail_download_error_space_not_enough_content">
        请确认您的U盘可用空间大于%1$s后
    </string>
    <string name="film_detail_recommended_player_title">大家都在看</string>
    <string name="film_watch_notice_title_shoufa">首发影院观影须知</string>
    <string name="film_watch_notice_title_tongbu">同步院线观影须知</string>
    <string name="film_watch_notice_content_shoufa"><![CDATA[
        根据影片发行方要求，观看首发影片有如下规则：<br/>
        1）本次购票观影时限为%1$d小时，但不限观影次数；
        ]]>
    </string>
    <string name="film_watch_notice_content_tongbu"><![CDATA[
        根据影片发行方要求，观看同步影片有如下规则：<br/>
        1）同步院线与电影影院观影体验一致，仅支持<font color="#58C3E0">单次</font>观看，<font color="#58C3E0">不支持</font>快进快退，<br/>
           同时请确保网络带宽大于<font color="#58C3E0">8M</font>；<br/>
        2）本次购买的影片，仅可在<font color="#58C3E0">当前账户、当前终端</font>观看；<br/>
        3) 为<font color="#58C3E0">保障影片版权</font>，在影片播放过程中会不定时出现你的账户信息，敬请谅解；<br/>
        4) 支持在线和下载观影方式（一次购票不支持方式切换）；下载观影需要<br/>
           充足空间的品牌U盘存储片文件，完成下载后即可播放；
        ]]>
    </string>
    <string name="film_watch_notice_hide">下次再提示我</string>
    <string name="film_watch_notice_hide_always">同意并关闭提示功能</string>
    <string name="credit_pay_notice_title">欢迎使用先看后付功能</string>
    <string name="credit_pay_notice_description">余额不足？没关系，你可以“先观影后付费”先睹为快。</string>
    <string name="credit_pay_notice_limit">先看后付额度:%1$s</string>
    <string name="credit_pay_notice_dead_line_days">账期:%1$d天</string>
    <string name="credit_pay_notice_dead_line_forever">账期:无限期</string>
    <string name="credit_pay_notice_refund_alert">（到账期须归还欠款，否则购买权限将受限）</string>
    <string name="play_film_detail_recommend_tips">退出《%1$s》播放？</string>
    <string name="play_film_detail_recommend_commit_text">继续播放</string>
    <string name="play_film_detail_recommend_cancel_text">退&#160;出</string>
    <string name="play_failed">播放失败</string>
    <string name="play_error_code">错误代码</string>
    <string name="play_error_desc">错误描述</string>
    <string name="play_error_unknown">未知错误</string>
    <string name="play_error_type_not_support">不支持该媒体资源</string>
    <string name="play_error_no_order">订单过期,请重新购买</string>
    <string name="play_error_ticket_overdue">电影票过期,请重新购买</string>
    <string name="play_error_mediainfo_not_found">无法获取该媒体资源信息</string>
    <string name="play_error_download_not_task">未找到下载记录</string>
    <string name="play_error_download_not_finish">下载未完成</string>
    <string name="play_error_local_file_missing">无法找到本地视频文件</string>
    <string name="play_error_local_file_missing_content">请插入存储视频文件的U盘，或重新下载后再播放</string>
    <string name="play_error_media_error">无法连接到媒体资源</string>
    <string name="play_error_network_error">网络异常</string>
    <string name="play_error_connect_timeout">播放器连接超时</string>
    <string name="play_error_format_not_support">播放器暂不支持该格式</string>
    <string name="play_overdue_title">《%1$s》电影票过期</string>
    <string name="play_overdue_content">请重新购买</string>
    <string name="player_upgrading">正在更新播放器</string>
    <string name="player_upgrade_success">更新播放器成功</string>
    <string name="player_upgrade_failed">更新播放器失败</string>
    <string name="download_finish">下载完成</string>
    <string name="download_already_progress">已下载%1$s</string>
    <string name="download_confirm_restore_backup_download">发现历史下载记录，是否恢复历史下载?</string>
    <string name="download_sel_path_to_restore_backup_download">请选择一个恢复下载的目录</string>
    <string name="download_sel_media_title">下载任务创建</string>
    <string name="download_sel_media_choose_media">选择资源</string>
    <string name="download_sel_media_choose_storage">选择存储器</string>
    <string name="download_sel_media_time_estimated">预计下载时长%1$s</string>
    <string name="download_sel_media_recommend">少侠！这种观影方式够清晰！</string>
    <string name="download_sel_media_storage_available_capacity"><![CDATA[可用空间<br/>%1$s]]></string>
    <string name="download_sel_media_storage_capacity_not_enough">空间不足</string>
    <string name="download_sel_media_storage_num">U盘%1$s</string>
    <string name="download_sel_media_storage_auto_select">%1$d秒后自动选择</string>
    <string name="download_restore_storage_already_progress"><![CDATA[已下载<br/>%1$s]]></string>
    <string name="download_restore_storage_title">发现下载记录，恢复下载记录?</string>
    <string name="download_restore_storage_restore">恢复下载</string>
    <string name="download_restore_storage_redownload">重新下载</string>
    <string name="download_select_restore_storage_title">下载记录选择</string>
    <string name="download_error_title">《%1$s》下载失败</string>
    <string name="download_error_description">错误描述:%1$s</string>
    <string name="download_error">下载失败</string>
    <string name="download_error_no_storage_device">没有存储设备</string>
    <string name="download_error_io_file_not_exist">无法找到文件或者存储设备</string>
    <string name="download_error_io_storage_device_not_exist">无法找到存储设备</string>
    <string name="download_error_io_file_read_failed">读取文件失败</string>
    <string name="download_error_io_file_write_failed">写入文件失败</string>
    <string name="download_error_io_file_create_failed">创建文件失败。</string>
    <string name="download_error_io_space_not_enouth">存储设备剩余空间不足</string>
    <string name="download_error_connection_closed">与服务器的连接断开</string>
    <string name="download_error_get_file_info_failed">无法获取下载文件信息，请稍后重试</string>
    <string name="download_error_io_network_not_available">网络连接异常</string>
    <string name="download_error_io_network_error">网络异常</string>
    <string name="purchase_help_info">客服电话:4001876867（9-21点） QQ:2970898808</string>
    <string name="purchase_help_credit_pay_not_deadline">先看后付：先观影后付款，操作简单更便捷；最终解释权归同步院线所有。</string>
    <string name="credit_expire_title">先看后付账单到期</string>
    <string name="credit_expire_content"><![CDATA[
        您的先看后付账单已到期(账期%1$s天)。为不影响您正常使用，请尽快还款。<br/>
        账单金额 : %2$.2f元 ( 额度 %3$.2f元 )
        ]]>
    </string>
    <string name="credit_expire_refund">立即还款</string>
    <string name="credit_expire_notice_later">稍后提醒我</string>
    <string name="qrcode_pay_normal_vip_monthly">开通连续包月&#160;&#160;扫码授权支付%1$.2f元</string>
    <string name="qrcode_pay_price_vip_monthly">商品总额&#160;:</string>
    <string name="qrcode_pay_vip_monthly_known">了解连续包月</string>
    <string name="qrcode_pay_pay_service_known">了解收费服务协议</string>
    <string name="qrcode_pay_scan_pay">扫码支付&#160;:</string>
    <string name="qrcode_pay_to_register_vip">付款成功后，会员立即生效</string>
    <string name="qrcode_pay_notice_vip_monthly">您的手机APP将会收到微信或支付宝的支付凭证</string>
    <string name="qrcode_pay_agree_vip_monthly">我同意连续包月自动扣费规则</string>
    <string name="qrcode_pay_qrtxt_1">使用</string>
    <string name="qrcode_pay_qrtxt_2">或</string>
    <string name="qrcode_pay_qrtxt_3">扫描上面的二维码</string>
    <string name="user_zero_money">0.00元</string>
    <string name="credit_btn_pay_yuan">您需要还款%1$s元</string>
    <string name="credit_need_pay_name">本期应还款:</string>
    <string name="credit_canused_name">可用余额:</string>
    <string name="user_credit_bottom_tips">先看后付:&#160;先观影后付款,操作简单更便捷%1$s;&#160;最终解析权归同步院线所有"
    </string>
    <string name="myinfo_credit_acount_info">先看后付账户信息</string>
    <string name="myinfo_user_credit_max_name">信用额度:</string>
    <string name="jump_btn_text">跳&#160;&#160;过</string>
    <string name="cancel_btn_text">返&#160;&#160;回</string>
    <string name="phone_number_string_detail24">建议返回上一步使用手机登录，提高账户安全性</string>
</resources>