<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_overdue_title"
        android:textColor="@color/color_ee"
        android:textSize="@dimen/play_overdue_title_text_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/play_overdue_content_margin_top"
        android:text="@string/play_overdue_content"
        android:textColor="@color/color_ee"
        android:textSize="@dimen/play_overdue_content_text_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/play_overdue_btn_margin_top"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="@dimen/play_overdue_btn_width"
            android:layout_height="@dimen/play_overdue_btn_height"
            android:background="@drawable/dialog_button_selector"
            android:text="@string/ok"
            android:textColor="@color/color_ee"
            android:textSize="@dimen/play_overdue_btn_text_size"/>
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="@dimen/play_overdue_btn_width"
            android:layout_height="@dimen/play_overdue_btn_height"
            android:layout_marginLeft="@dimen/play_overdue_btn_margin_left"
            android:background="@drawable/dialog_button_selector"
            android:text="@string/cancel"
            android:textColor="@color/color_ee"
            android:textSize="@dimen/play_overdue_btn_text_size"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>